Mise à jour du header avec nouveau titre et logo

--- a/try1.html
+++ b/try1.html
@@ -10,7 +10,7 @@
 
     <!-- En-tête -->
     <header>
-        <img src="Images/Header/LOGO.png" alt="logo" class="logo">
+        <img src="Images/logo.jpg" alt="logo" class="logo">
         <nav>
             <a href="#">Accueil</a>
         </nav>
@@ -18,7 +18,7 @@
 
     <!-- Bannière -->
     <div class="banner">
-        <h1>Explorez vos destinations préférées</h1>
+        <h1>Bienvenue au Musée des Musées !</h1>
     </div>
 
     <!-- Section des destinations -->
